<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.animalcrossing.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_insect"
        android:name="com.example.animalcrossing.ui.insect.InsectListFragment"
        android:label="@string/menu_insect"
        tools:layout="@layout/fragment_insect_list" >
        <action
            android:id="@+id/action_nav_insect_to_insect_detail"
            app:destination="@id/insect_detail" />
    </fragment>

    <fragment
        android:id="@+id/insect_detail"
        android:name="com.example.animalcrossing.ui.detail.InsectDetailFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="title"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.animalcrossing.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>